force-app/main/default/objects/Medical_Bill__c/Medical_Bill__c.object-meta.xml
<CustomObject>
    <label>Medical Bill</label>
    <nameField>
        <displayFormat>MB-{000000}</displayFormat>
        <label>Medical Bill No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Bills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>