force-app/main/default/objects/Medical_Bill__c/fields/ABHA_ID__c.field-meta.xml
<CustomField>
    <fullName>ABHA_ID__c</fullName>
    <formula>Patient__r.ABHA_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABHA ID</label>
    <type>Text</type>
</CustomField>