force-app/main/default/objects/Medical_Bill__c/fields/Medical_Test__c.field-meta.xml
<CustomField>
    <fullName>Medical_Test__c</fullName>
    <label>Medical Test</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>