force-app/main/default/objects/Medical_Bill__c/fields/Nursing_Charges__c.field-meta.xml
<CustomField>
    <fullName>Nursing_Charges__c</fullName>
    <label>Nursing Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>