force-app/main/default/objects/Medical_Bill__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Medical Bills</relationshipLabel>
    <relationshipName>Medical_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>