force-app/main/default/objects/Medical_Bill__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <formula>Patient__r.Patient_Name__c</formula>
    <label>Patient Name</label>
    <type>Text</type>
</CustomField>