force-app/main/default/objects/Medical_Bill__c/fields/Surgery_Cost__c.field-meta.xml
<CustomField>
    <fullName>Surgery_Cost__c</fullName>
    <label>Surgery Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>