force-app/main/default/objects/Medical_Bill__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>(Medical_Test__c  +  Nursing_Charges__c  +  Surgery_Cost__c  +  Consultation_Fees__c +  Medicines_Cost__c  +  GST__c) -  Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>